--- a/home/dot_config/pacman/mirrors.yaml
+++ b/home/dot_config/pacman/mirrors.yaml
@@ -1,101 +1,69 @@
 official:
+  MIRRORS:
+    阿里云: https://mirrors.aliyun.com/archlinux/$repo/os/$arch
+    网易: https://mirrors.163.com/archlinux/$repo/os/$arch
+    清华: https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
+    北外: https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
+    pkgbuild-geo: https://geo.mirror.pkgbuild.com/$repo/os/$arch
+    pkgbuild-asia: https://asia.mirror.pkgbuild.com/$repo/os/$arch
+    WTAKO: https://arch-mirror.wtako.net/$repo/os/$arch
+    # 以下更新可能较慢
+    交大: https://mirrors.sjtug.sjtu.edu.cn/archlinux/$repo/os/$arch
+    浙大: http://mirrors.zju.edu.cn/archlinux/$repo/os/$arch
+    西交大: https://mirrors.xjtu.edu.cn/archlinux/$repo/os/$arch
+    中科大: https://mirrors.ustc.edu.cn/archlinux/$repo/os/$arch
+    南大: https://mirrors.nju.edu.cn/archlinux/$repo/os/$arch
+    哈工大: https://mirrors.hit.edu.cn/archlinux/$repo/os/$arch
+    南邮: https://mirrors.njupt.edu.cn/archlinux/$repo/os/$arch
+    上科大: https://mirrors.shanghaitech.edu.cn/archlinux/$repo/os/$arch
+    重大: https://mirrors.cqu.edu.cn/archlinux/$repo/os/$arch
+    大连东软: https://mirrors.neusoft.edu.cn/archlinux/$repo/os/$arch
+    武昌首义学院: https://mirrors.wsyu.edu.cn/archlinux/$repo/os/$arch
+    rackspace-香港: https://hkg.mirror.rackspace.com/archlinux/$repo/os/$arch
+    xTom-香港: https://mirror.xtom.com.hk/archlinux/$repo/os/$arch
+  LABEL: country
+  RULES:
+    中国:
+      LABEL: state
+      RULES:
+        香港 Hong Kong:
+          - pkgbuild-asia
+          - WTAKO
+      DEFAULT:
+        - 清华
+        - 阿里云
+        - 北外
+        - 网易
   DEFAULT:
-    - https://geo.mirror.pkgbuild.com/$repo/os/$arch
-    - https://mirror.rackspace.com/archlinux/$repo/os/$arch
-  中国:
-    DEFAULT:
-      # 阿里云
-      - https://mirrors.aliyun.com/archlinux/$repo/os/$arch
-      # 网易
-      - https://mirrors.163.com/archlinux/$repo/os/$arch
-      # 清华大学
-      # - https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
-      # 上海交通大学
-      # - https://mirrors.sjtug.sjtu.edu.cn/archlinux/$repo/os/$arch
-      # 浙江大学
-      # - http://mirrors.zju.edu.cn/archlinux/$repo/os/$arch
-      # 西安交通大学
-      # - https://mirrors.xjtu.edu.cn/archlinux/$repo/os/$arch
-      # 中国科学技术大学
-      # - https://mirrors.ustc.edu.cn/archlinux/$repo/os/$arch
-      # 南京大学
-      # - https://mirrors.nju.edu.cn/archlinux/$repo/os/$arch
-      # 北京外国语大学
-      # - https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
-      # 哈尔滨工业大学
-      # - https://mirrors.hit.edu.cn/archlinux/$repo/os/$arch
-      # 南京邮电大学
-      # - https://mirrors.njupt.edu.cn/archlinux/$repo/os/$arch
-      # 上海科技大学
-      # - https://mirrors.shanghaitech.edu.cn/archlinux/$repo/os/$arch
-      # 重庆大学
-      # - https://mirrors.cqu.edu.cn/archlinux/$repo/os/$arch
-      # 大连东软信息学院
-      # - https://mirrors.neusoft.edu.cn/archlinux/$repo/os/$arch
-      # 武昌首义学院
-      # - https://mirrors.wsyu.edu.cn/archlinux/$repo/os/$arch
-    北京市:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
-    海淀区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
-    西城区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
-    东城区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.bfsu.edu.cn/archlinux/$repo/os/$arch
-    上海市:
-      - https://mirrors.sjtug.sjtu.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.shanghaitech.edu.cn/archlinux/$repo/os/$arch
-    松江区:
-      - https://mirrors.sjtug.sjtu.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.shanghaitech.edu.cn/archlinux/$repo/os/$arch
-    普陀区:
-      - https://mirrors.sjtug.sjtu.edu.cn/archlinux/$repo/os/$arch
-      - https://mirrors.shanghaitech.edu.cn/archlinux/$repo/os/$arch
-    "香港島 Hong Kong Island":
-      - https://mirror.xtom.com.hk/archlinux/$repo/os/$arch
-      - https://hkg.mirror.rackspace.com/archlinux/$repo/os/$arch
-      - https://mirror-hk.koddos.net/archlinux/$repo/os/$arch
-      - https://asia.mirror.pkgbuild.com/$repo/os/$arch
-      - https://arch-mirror.wtako.net/$repo/os/$arch
-    "九龍 Kowloon":
-      - https://hkg.mirror.rackspace.com/archlinux/$repo/os/$arch
-      - https://mirror.xtom.com.hk/archlinux/$repo/os/$arch
-      - https://mirror-hk.koddos.net/archlinux/$repo/os/$arch
-      - https://asia.mirror.pkgbuild.com/$repo/os/$arch
-      - https://arch-mirror.wtako.net/$repo/os/$arch
+    - 阿里云
+    - pkgbuild-geo
 
 archlinuxcn:
+  MIRRORS:
+    阿里云: https://mirrors.aliyun.com/archlinuxcn/$arch
+    腾讯云: https://mirrors.cloud.tencent.com/archlinuxcn/$arch
+    网易: https://mirrors.163.com/archlinux-cn/$arch
+    清华: https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
+    北外: https://mirrors.bfsu.edu.cn/archlinuxcn/$arch
+    # 以下更新可能较慢
+    交大: https://mirror.sjtu.edu.cn/archlinux-cn/$arch
+    北大: https://mirrors.pku.edu.cn/archlinuxcn/$arch  # 更新慢
+    xTom-香港: https://mirrors.xtom.hk/archlinuxcn/$arch
+  LABEL: country
+  RULES:
+    中国:
+      LABEL: state
+      RULES:
+        香港 Hong Kong:
+          - 阿里云
+          - 腾讯云
+          - xTom-香港
+      DEFAULT:
+        - 清华
+        - 阿里云
+        - 北外
+        - 腾讯云
+        - 网易
   DEFAULT:
-    # 阿里云
-    - https://mirrors.aliyun.com/archlinuxcn/$arch
-    # 腾讯云
-    - https://mirrors.cloud.tencent.com/archlinuxcn/$arch
-  中国:
-    DEFAULT:
-      # 网易
-      - https://mirrors.163.com/archlinux-cn/$arch
-    上海市:
-      # 上海交大
-      - https://mirror.sjtu.edu.cn/archlinux-cn/$arch
-    松江区:
-      - https://mirror.sjtu.edu.cn/archlinux-cn/$arch
-    北京市:
-      # 清华大学
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
-      # 北京外国语大学
-      - https://mirrors.bfsu.edu.cn/archlinuxcn/$arch
-      # 北京大学, 更新太慢
-      # - https://mirrors.pku.edu.cn/archlinuxcn/$arch
-    海淀区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
-      - https://mirrors.bfsu.edu.cn/archlinuxcn/$arch
-    西城区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
-      - https://mirrors.bfsu.edu.cn/archlinuxcn/$arch
-    东城区:
-      - https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
-      - https://mirrors.bfsu.edu.cn/archlinuxcn/$arch
+    - 阿里云
+    - 腾讯云
