[clash] Update clash-gen; enable authentication.

--- a/home/dot_config/systemd/user/clash-gen.service
+++ b/home/dot_config/systemd/user/clash-gen.service
@@ -3,4 +3,4 @@ Description=Clash Config Generator
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/env ${HOME}/.local/bin/scripts/clash-gen
+ExecStart=/bin/env clash-gen
