[sh] Switch to a dynamic approach to environmental variables.

--- a/home/dot_config/systemd/user/clash-localhost.service
+++ b/home/dot_config/systemd/user/clash-localhost.service
@@ -2,7 +2,7 @@
 
 [Unit]
 Description=Clash-Meta for localhost
-After=clash.target
+After=envvar-setting.target clash.target
 
 [Service]
 Type=exec
