--- a/home/dot_config/systemd/user/emacs.service
+++ b/home/dot_config/systemd/user/emacs.service
@@ -3,6 +3,7 @@
 [Unit]
 Description=Emacs text editor
 Documentation=info:emacs man:emacs(1) https://gnu.org/software/emacs/
+After=envvar-setting.target
 
 [Service]
 Type=notify
