--- a/home/dot_config/private_clash/settings.yaml
+++ b/home/dot_config/private_clash/settings.yaml
@@ -21,6 +21,13 @@ dns:
     - 9.9.9.9
     - 208.67.222.222
 
+# On Linux, run `sudo setcap cap_net_admin=eip /path/to/clash-meta/kernel`.
+tun:
+  enable: true
+  stack: mixed
+  auto-route: true
+  auto-detect-interface: true
+
 geox-url:
   geoip: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
   geosite: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
