--- a/home/dot_config/private_clash/settings.yaml
+++ b/home/dot_config/private_clash/settings.yaml
@@ -20,6 +20,8 @@ dns:
     - 8.8.8.8
     - 9.9.9.9
     - 208.67.222.222
+  fake-ip-filter:
+    - "*.local"
 
 # On Linux, run `sudo setcap cap_net_admin=eip /path/to/clash-meta/kernel`.
 tun:
