[ssh][network] Switch to dot private based domain names.

--- a/home/dot_ssh/config
+++ b/home/dot_ssh/config
@@ -16,6 +16,6 @@ Host gitlab.freedesktop.org
   User git
   IdentityFile ~/.ssh/xdg-gitlab
 
-Host lipid.local
+Host lipid.private
   User cys
   IdentityFile ~/.ssh/lipid
