--- a/home/dot_config/private_clash/settings.yaml
+++ b/home/dot_config/private_clash/settings.yaml
@@ -22,6 +22,7 @@ dns:
     - 208.67.222.222
   fake-ip-filter:
     - "*.local"
+    - ping.archlinux.org
 
 # TUN requires elevated permissions.
 #
