[katago] Update KataGo config.

--- a/home/dot_config/KataGo/gtp.cfg
+++ b/home/dot_config/KataGo/gtp.cfg
@@ -1,34 +1,9 @@
-# Configuration for KataGo C++ GTP engine
 
-# Run the program using: `./katago.exe gtp`
+# Config for KataGo C++ GTP engine, i.e. "./katago.exe gtp"
 
-# In this example config, when a parameter is given as a commented out value,
+# In this config, when a parameter is given as a commented out value,
 # that value also is the default value, unless described otherwise. You can
 # uncomment it (remove the pound sign) and change it if you want.
-
-# ===========================================================================
-# Running on an online server or in a real tournament or match
-# ===========================================================================
-# If you plan to run online or in a tournament, read through the "Rules"
-# section below for proper handling of komi, handicaps, end-of-game cleanup,
-# and other details.
-
-# ===========================================================================
-# Notes about performance and memory usage
-# ===========================================================================
-# Important: For good performance, you will very likely want to tune the
-# "numSearchThreads" parameter in the Search limits section below! Run
-# "./katago benchmark" to test KataGo and to suggest a reasonable value
-# of this parameter.
-
-# For multi-GPU systems, read "OpenCL GPU settings" or "CUDA GPU settings".
-#
-# When using OpenCL, verify that KataGo picks the correct device! Some systems
-# may have both an Intel CPU OpenCL and GPU OpenCL. If # KataGo picks the wrong
-# one, correct this by specifying "openclGpuToUse".
-#
-# Consider adjusting "maxVisits", "ponderingEnabled", "resignThreshold", and
-# other parameters depending on your intended usage.
 
 # ===========================================================================
 # Command-line usage
@@ -44,7 +19,7 @@
 
 # Each run of KataGo will log to a separate file in this dir.
 # This is the default.
-logDir = /home/cys/.config/KataGo/gtp_logs
+logDir = gtp_logs
 # Uncomment and specify this instead of logDir to write separate dated subdirs
 # logDirDated = gtp_logs
 # Uncomment and specify this instead of logDir to log to only a single file
@@ -53,6 +28,7 @@ logDir = /home/cys/.config/KataGo/gtp_logs
 # Logging options
 logAllGTPCommunication = true
 logSearchInfo = true
+logSearchInfoForChosenMove = false
 logToStderr = false
 
 # KataGo will display some info to stderr on GTP startup
@@ -85,8 +61,11 @@ logToStderr = false
 # An extreme value like 1 distributes playouts across every move on the board,
 # even very bad moves.
 # Affects analysis only, does not affect play.
-
 # analysisWideRootNoise = 0.04
+
+# Try to limit the effect of possible bad or bogus move sequences in the
+# history leading to this position from affecting KataGo's move predictions.
+# analysisIgnorePreRootHistory = true
 
 # ===========================================================================
 # Rules
@@ -99,62 +78,19 @@ logToStderr = false
 # See https://github.com/lightvector/KataGo/blob/master/docs/GTP_Extensions.md
 # for GTP commands.
 
-# Specify the rules as a string.
-# Some legal values include:
-#   chinese, japanese, korean, aga, chinese-ogs, new-zealand, stone-scoring,
-#   ancient-territory, bga, aga-button
-#
-# For some human rulesets that require complex adjudication in tricky cases
-# (e.g. japanese, korean) KataGo may not precisely match the ruleset in such
-# cases but will do its best.
-rules = chinese
+koRule = SIMPLE  # options: SIMPLE, POSITIONAL, SITUATIONAL
 
-# By default, the "rules" parameter is used, but if you comment it out and
-# uncomment one option in each of the sections below, you can specify an
-# arbitrary combination of individual rules.
+scoringRule = AREA  # options: AREA, TERRITORY
 
-# koRule = SIMPLE       # Simple ko rules (triple ko = no result)
-# koRule = POSITIONAL   # Positional superko
-# koRule = SITUATIONAL  # Situational superko
+taxRule = NONE  # options: NONE, SEKI, ALL
 
-# scoringRule = AREA       # Area scoring
-# scoringRule = TERRITORY  # Territory scoring (special computer-friendly territory rules)
+multiStoneSuicideLegal = false
 
-# taxRule = NONE  # All surrounded empty points are scored
-# taxRule = SEKI  # Eyes in seki do NOT count as points
-# taxRule = ALL   # All groups are taxed up to 2 points for the two eyes needed to live
+hasButton = false
 
-# Is multiple-stone suicide legal? (Single-stone suicide is always illegal).
-# multiStoneSuicideLegal = false
-# multiStoneSuicideLegal = true
+whiteHandicapBonus = N  # options: 0, N, N-1
 
-# "Button go" - the first pass when area scoring awards 0.5 points and does
-# not count for ending the game.
-# Allows area scoring rulesets that have far simpler rules to achieve the same
-# final scoring precision and reward for precise play as territory scoring.
-# hasButton = false
-# hasButton = true
-
-# Is this a human ruleset where it's okay to pass before having physically
-# captured and removed all dead stones?
-# friendlyPassOk = false
-# friendlyPassOk = true
-
-# How handicap stones in handicap games are compensated
-# whiteHandicapBonus = 0    # White gets no compensation for black's handicap stones (Tromp-taylor, NZ, JP)
-# whiteHandicapBonus = N-1  # White gets N-1 points for black's N handicap stones (AGA)
-# whiteHandicapBonus = N    # White gets N points for black's N handicap stones (Chinese)
-
-# ------------------------------
-# Other rules hacks
-# ------------------------------
-# Uncomment and change to adjust what board size KataGo uses upon startup
-# by default when GTP doesn't specify.
-# defaultBoardSize = 19
-
-# By default, Katago will use the komi that the GUI or GTP controller tries to set.
-# Uncomment and set this to have KataGo ignore the controller and always use this komi.
-# ignoreGTPAndForceKomi = 7
+friendlyPassOk = true
 
 # ===========================================================================
 # Bot behavior
@@ -191,19 +127,20 @@ resignConsecTurns = 3
 # based on those game settings that it must be stronger or weaker than the
 # opponent and to play accordingly. Greatly improves handicap strength by
 # biasing winrates and scores to favor appropriate safe/aggressive play.
-# Does not affect analysis (lz-analyze, kata-analyze, used by programs like
+# Does NOT affect analysis (lz-analyze, kata-analyze, used by programs like
 # Lizzie) so analysis remains unbiased. Uncomment and set this to 0 to disable
 # this and make KataGo play the same always.
 # dynamicPlayoutDoublingAdvantageCapPerOppLead = 0.045
 
 # Instead of "dynamicPlayoutDoublingAdvantageCapPerOppLead", you can comment
-# that out and uncomment and set "playoutDoublingAdvantage" to a value between
-# from -3.0 to 3.0 to set KataGo's aggression to a FIXED level. This affects
-# analysis tools (lz-analyze, kata-analyze, used by programs like Lizzie).
-# Negative makes KataGo behave as if it is much weaker than the opponent,
-# preferring to play defensively. Positive makes KataGo behave as if it is
-# much stronger than the opponent, prefering to play aggressively or even
-# overplay slightly.
+# that out and uncomment and set "playoutDoublingAdvantage" to a fixed value
+# from -3.0 to 3.0 that will not change dynamically.
+# ALSO affects analysis tools (lz-analyze, kata-analyze, used by e.g. Lizzie).
+# Negative makes KataGo behave as if it is much weaker than the opponent.
+# Positive makes KataGo behave as if it is much stronger than the opponent.
+# KataGo will adjust to favor safe/aggressive play as appropriate based on
+# the combination of who is ahead and how much stronger/weaker it thinks it is,
+# and report winrates and scores taking the strength difference into account.
 #
 # If this and "dynamicPlayoutDoublingAdvantageCapPerOppLead" are both set
 # then dynamic will be used for all games and this fixed value will be used
@@ -257,6 +194,10 @@ resignConsecTurns = 3
 # By default: true when playing via GTP, but false when analyzing.
 # antiMirror = true
 
+# Enable some hacks that mitigate rare instances when passing messes up deeper searches.
+# enablePassingHacks = true
+
+
 # ===========================================================================
 # Search limits
 # ===========================================================================
@@ -279,21 +220,13 @@ resignConsecTurns = 3
 
 # Limits for search on the current turn.
 # If commented out or unspecified, the default is to have no limit.
-maxVisits = 500
-# maxPlayouts = 300
-# maxTime = 10.0
+#maxVisits = 1
+#maxPlayouts = 1
+#maxTime = 1
 
 # Ponder on the opponent's turn?
 ponderingEnabled = false
-
-# Limits for search when pondering on the opponent's turn.
-# If commented out or unspecified, the default is to have no limit.
-# Limiting the maximum time is recommended so that KataGo won't burn CPU/GPU
-# forever and/or run out of RAM if left unattended while pondering is enabled.
-# maxVisitsPondering = 5000
-# maxPlayoutsPondering = 3000
-maxTimePondering = 60.0
-
+# maxTimePondering = 60.0
 
 # ------------------------------
 # Other search limits and behavior
@@ -303,16 +236,8 @@ maxTimePondering = 60.0
 # move a bit faster assuming there is this much lag per move.
 lagBuffer = 1.0
 
-# YOU PROBABLY WANT TO TUNE THIS PARAMETER!
-# The number of threads to use when searching. On powerful GPUs the optimal
-# threads may be much higher than the number of CPU cores you have because
-# many threads are needed to feed efficient large batches to the GPU.
-#
-# Run "./katago benchmark" to tune this parameter and test the effect
-# of changes to any of other parameters.
-{{ if eq .cys.machine "HP EliteBook 755 G5" -}}
-numSearchThreads = 5
-{{- end }}
+# Number of threads to use in search
+numSearchThreads = 12
 
 # Play a little faster if the opponent is passing, for human-friendliness.
 # Comment these out to disable them, such as if running a controlled match
@@ -346,123 +271,14 @@ searchFactorWhenWinningThreshold = 0.95
 # visualizations, where each entry will take roughly 3KB. The number of
 # entries is (2 ** nnCacheSizePowerOfTwo). (E.g. 2 ** 18 = 262144.)
 # You can compute roughly how much memory the cache will use based on this.
-# nnCacheSizePowerOfTwo = 20
+nnCacheSizePowerOfTwo = 22
 
 # Size of mutex pool for nnCache is (2 ** this).
-# nnMutexPoolSizePowerOfTwo = 16
+nnMutexPoolSizePowerOfTwo = 18
 
-# Randomize board orientation when running neural net evals? Uncomment and
-# set to false to disable.
-# nnRandomize = true
+numNNServerThreadsPerModel = 1
+openclDeviceToUseThread0 = 0
 
-# If provided, force usage of a specific seed for nnRandomize.
-# The default is to use a randomly generated seed.
-# nnRandSeed = abcdefg
-
-# ------------------------------
-# Multiple GPUs
-# ------------------------------
-# Set this to the number of GPUs to use or that are available.
-# IMPORTANT: If more than 1, also uncomment the appropriate TensorRT
-# or CUDA or OpenCL section.
-# numNNServerThreadsPerModel = 1
-
-# ------------------------------
-# TENSORRT GPU settings
-# ------------------------------
-# These only apply when using the TENSORRT version of KataGo.
-
-# For one GPU: optionally uncomment this option and change if the GPU to
-# use is not device 0.
-# trtDeviceToUse = 0
-
-# For two GPUs: Uncomment these options, AND set numNNServerThreadsPerModel above.
-# Also, change their values if the devices you want to use are not 0 and 1.
-# trtDeviceToUseThread0 = 0
-# trtDeviceToUseThread1 = 1
-
-# For three GPUs: Uncomment these options, AND set numNNServerThreadsPerModel above.
-# Also, change their values if the devices you want to use are not 0 and 1 and 2.
-# trtDeviceToUseThread0 = 0
-# trtDeviceToUseThread1 = 1
-# trtDeviceToUseThread2 = 2
-
-# The pattern continues for additional GPUs.
-
-# ------------------------------
-# CUDA GPU settings
-# ------------------------------
-# These only apply when using the CUDA version of KataGo.
-
-# For one GPU: optionally uncomment and change this if the GPU you want to
-# use is not device 0
-# cudaDeviceToUse = 0
-
-# For two GPUs: Uncomment these options, AND set numNNServerThreadsPerModel above.
-# Also, change their values if the devices you want to use are not 0 and 1.
-# cudaDeviceToUseThread0 = 0
-# cudaDeviceToUseThread1 = 1
-
-# For three GPUs: Uncomment these options, AND set numNNServerThreadsPerModel above.
-# Also, change their values if the devices you want to use are not 0 and 1 and 2.
-# cudaDeviceToUseThread0 = 0
-# cudaDeviceToUseThread1 = 1
-# cudaDeviceToUseThread2 = 2
-
-# The pattern continues for additional GPUs.
-
-# KataGo will automatically use FP16 or not based on the compute capability
-# of your NVIDIA GPU. If you want to try to force a particular behavior
-# you can uncomment these lines and change them to "true" or "false".
-# cudaUseFP16 = auto
-# cudaUseNHWC = auto
-
-# ------------------------------
-# OpenCL GPU settings
-# ------------------------------
-# These only apply when using the OpenCL version of KataGo.
-
-# Uncomment and set to true to tune OpenCL for every board size separately,
-# rather than only the largest possible size.
-# openclReTunePerBoardSize = false
-
-# For one GPU: optionally uncomment and change this if the best device to use is guessed incorrectly.
-# The default behavior tries to guess the 'best' GPU or device on your system to use, usually it will be a good guess.
-# openclDeviceToUse = 0
-
-# For two GPUs: Uncomment these two lines and replace X and Y with the device ids of the devices you want to use.
-# It might NOT be 0 and 1, some computers will have many OpenCL devices. You can see what the devices are when
-# KataGo starts up - it should print or log all the devices it finds.
-# (AND also set numNNServerThreadsPerModel above)
-# openclDeviceToUseThread0 = X
-# openclDeviceToUseThread1 = Y
-
-# For three GPUs: Uncomment these three lines and replace X and Y and Z with the device ids of the devices you want to use.
-# It might NOT be 0 and 1 and 2, some computers will have many OpenCL devices. You can see what the devices are when
-# KataGo starts up - it should print or log all the devices it finds.
-# (AND also set numNNServerThreadsPerModel above)
-# openclDeviceToUseThread0 = X
-# openclDeviceToUseThread1 = Y
-# openclDeviceToUseThread2 = Z
-
-# The pattern continues for additional GPUs.
-
-# KataGo will automatically use FP16 or not based on testing your GPU during
-# tuning. If you want to try to force a particular behavior though you can
-# uncomment this option and change it to "true" or "false". This is a fairly
-# blunt setting - more detailed settings are testable by rerunning the tuner
-# with various arguments (./katago tuner).
-# openclUseFP16 = auto
-
-# ------------------------------
-# Eigen-specific settings
-# ------------------------------
-# These only apply when using the Eigen (pure CPU) version of KataGo.
-
-# Number of CPU threads for evaluating the neural net on the Eigen backend.
-#
-# Default: numSearchThreads
-# numEigenThreadsPerModel = X
 
 # ===========================================================================
 # Root move selection and biases
@@ -552,6 +368,10 @@ searchFactorWhenWinningThreshold = 0.95
 # uncertaintyExponent = 1.0
 # uncertaintyCoeff = 0.25
 
+# Explore using optimistic policy
+# rootPolicyOptimism = 0.2
+# policyOptimism = 1.0
+
 # Amount to apply a downweighting of children with very bad values relative
 # to good ones.
 # valueWeightExponent = 0.25
@@ -632,4 +452,3 @@ searchFactorWhenWinningThreshold = 0.95
 # avoidSgf2PatternAllowedNames = ...
 # avoidSgf2PatternMinTurnNumber = ...
 
-# -*- mode: conf -*-
